--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,10 @@
     padding: 0px;
 }
 
+:root {
+    --cor_degra: #480325, #421D65, #484CAE, #6D81E0;
+}
+
 html {
     background-color: rgba(0, 0, 0, 0.301);
 }
@@ -56,8 +60,26 @@ section#login {
     left: 50%;
     transform: translate(-50%, -50%);
     opacity: 0;
+
 }
 
 section#register {
     opacity: 1;
+}
+
+#email {
+    border: none;
+    min-height: 20px;
+    border-radius: 2px;
+    background-color: orangered;
+    
+}
+
+#login_buton {
+    border: none;
+    background-image: linear-gradient(120deg , var(--cor_degra));
+    
+    min-width: 100px;
+    padding: 10px;
+    
 }
