--- a/styles.css
+++ b/styles.css
@@ -13,73 +13,57 @@ html {
     background-color: rgba(0, 0, 0, 0.301);
 }
 
-#mudar{
-    border: none;
+#tittle {
+    margin-top: 30px;
+    color: white;
+    margin-left: 42%;
+    margin-bottom: 40px;
+
 }
 
-.deCima1 {
-    border: none;
-    background-color: orange;
-    padding: 10px;
-    border-radius: 0px 10px 0px 0px;
-}
-
-.deCima2 {
-    border: none;
-    background-color: orange;
-    padding: 10px;
-    border-radius: 0px 10px 0px 0px;
-}
-
-.deCima1:hover {
-    background-color: white;
-}
-
-.deCima2:hover {
-    background-color: white;
-}
-
-main {
+#login {
+    border-radius: 12.5px;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    
+    background-image: linear-gradient(120deg, var(--cor_degra));
+    width: clamp(200px, 50%, 400px);
+    height: clamp(300px, 50%, 400px);
+    color: white;
+    text-align: justify;
 }
 
-section {
-    background-color: rgba(247, 104, 52, 0.548);
-    width: 400px;
-    min-height:100px ;
-    margin: 10pxa;
+#checkBox {
+    display: flex;
+    margin-left: 30%;
+    font-size: 10px;
+    padding: 2px
 }
 
-section#login {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    opacity: 0;
-
-}
-
-section#register {
-    opacity: 1;
-}
-
-#email {
+.email {
+    display: block;
+    margin-left: 20%;
+    margin-bottom: 20px;
     border: none;
-    min-height: 20px;
-    border-radius: 2px;
-    background-color: orangered;
-    
+    width: 60%;
 }
 
-#login_buton {
+.senha {
+    display: block;
+    margin-left: 20%;
+    margin-bottom: 30px;
     border: none;
-    background-image: linear-gradient(120deg , var(--cor_degra));
-    
-    min-width: 100px;
-    padding: 10px;
-    
+    width: 60%;
+}
+
+#login_button {
+    display: flex;
+    position: relative;
+    margin-bottom: 30px;
+    margin-top: 20px;
+    margin-left: 40%;
+    padding: 6px 20px;
+    border-radius: 5px;
+    border: none;
 }
