--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@
 * {
     margin: 0px;
     padding: 0px;
+    box-sizing: border-box;
 }
 
 :root {
@@ -13,57 +14,45 @@ html {
     background-color: rgba(0, 0, 0, 0.301);
 }
 
-#tittle {
-    margin-top: 30px;
-    color: white;
-    margin-left: 42%;
-    margin-bottom: 40px;
-
+h1 {
+    margin-bottom: 30px;
 }
 
 #login {
-    border-radius: 12.5px;
+    background-image: linear-gradient(120deg, var(--cor_degra));
+    width: 400px;
+    height: 300px;
+    border-radius: 20px;
+    color: white;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-image: linear-gradient(120deg, var(--cor_degra));
-    width: clamp(200px, 50%, 400px);
-    height: clamp(300px, 50%, 400px);
-    color: white;
-    text-align: justify;
 }
 
-#checkBox {
-    display: flex;
-    margin-left: 30%;
-    font-size: 10px;
-    padding: 2px
-}
-
-.email {
-    display: block;
-    margin-left: 20%;
+.input {
+    
     margin-bottom: 20px;
+    background: none;
     border: none;
-    width: 60%;
+    border-bottom: 1px solid purple;
+    
 }
 
-.senha {
-    display: block;
-    margin-left: 20%;
-    margin-bottom: 30px;
-    border: none;
-    width: 60%;
+#check {
+    display: inline-block;
+    margin-bottom: 20px;
 }
 
-#login_button {
-    display: flex;
-    position: relative;
-    margin-bottom: 30px;
-    margin-top: 20px;
-    margin-left: 40%;
-    padding: 6px 20px;
+.button {
+    padding: 2px 5px 2px 5px;
     border-radius: 5px;
     border: none;
 }
