--- a/styles.css
+++ b/styles.css
@@ -61,7 +61,7 @@ html {
 }
 
 .butao:hover {
-    background-image: linear-gradient(120deg, red, white);
+    background-color: rgba(255, 0, 0, 0.63);
 }
 
 #frase {
